MAP a5_vault Changes

--- a/bfeber/Mod/changes.txt
+++ b/bfeber/Mod/changes.txt
@@ -195,3 +195,8 @@ TO DO:
 Close the toner ports
 Close the falling cabinet door
 Check strider elevator button colors
+
+a5_vault
+========
+
+No changes
