MAP a5_ending Changes

--- a/bfeber/Mod/changes.txt
+++ b/bfeber/Mod/changes.txt
@@ -200,3 +200,11 @@ a5_vault
 ========
 
 No changes
+
+a5_ending
+=========
+
+Fixed not being able to use each candler separately
+
+TO DO:
+Enable credits escape
