--- a/bfeber/Mod/changes.txt
+++ b/bfeber/Mod/changes.txt
@@ -53,3 +53,15 @@ a2_headcrabs_tunnel
 ===================
 
 Removed flashlight tutorial on auto-flashlight
+
+a2_drainage
+===========
+
+Fixed both roller door wheels to turn on hold 
+
+a2_train_yard
+=============
+
+No changes
+
+TODO: Open fence port by default
